# obsidian-gateway

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  server.json
.claude/agents/: gateway-dev.md  gateway-security-reviewer.md  wiki-curator.md  wiki-ingest.md  wiki-lint.md  wiki-research.md
.github/workflows/: ci.yml  release.yml
deploy/: auto-update.sh  knowledge-gateway-update.service  knowledge-gateway-update.timer  knowledge-gateway.service  obsidian-gateway-update.service  obsidian-gateway.service
gateway/: config.py  convert.py  detect.py  edits.py  gitops.py  graph.py  links.py  locks.py  search.py  server.py  tools.py
gateway/codegraph/: __init__.py  build.py  cli.py  extract_ansible.py  extract_python.py  treesitter.py
tests/: conftest.py  test_codegraph.py  test_detect.py  test_edits.py  test_gitops.py  test_graph.py  test_locks.py  test_masking.py  test_search.py  test_security.py  test_tools.py
