[project]
name = "obsidian-gateway"
version = "0.4.0"
description = "Filesystem/git-native FastMCP gateway serving Obsidian vaults over MCP"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Filip Szalaj" }]
requires-python = ">=3.11"
keywords = ["obsidian", "mcp", "fastmcp", "git", "markdown", "vault", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: Markdown",
]
# Upper bounds matter: consumers run this exact gateway via `uvx --from git+...@<ref>`
# with no lockfile of their own, so a future fastmcp/pyyaml/ruamel MAJOR could silently
# break the pinned gateway on a fresh resolve. Bound to the current major; widen
# deliberately after testing. The committed uv.lock pins the exact transitive tree.
dependencies = [
    "fastmcp>=3,<4",
    "pyyaml>=6,<7",
    "ruamel.yaml>=0.18,<0.19",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://github.com/fszalaj/obsidian-gateway"
Repository = "https://github.com/fszalaj/obsidian-gateway"
Issues = "https://github.com/fszalaj/obsidian-gateway/issues"

[project.scripts]
obsidian-gateway = "gateway.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
