[project]
name = "knowledge-gateway"
version = "0.7.4"
description = "Filesystem/git-native FastMCP knowledge gateway: serve an Obsidian vault over MCP, plus optional code-graph and doc-to-markdown tools (formerly obsidian-gateway)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Filip Szalaj" }]
requires-python = ">=3.11"
keywords = ["obsidian", "mcp", "fastmcp", "git", "markdown", "vault", "knowledge-base", "code-graph", "knowledge-graph", "ansible", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: Markdown",
]
# Upper bounds matter: consumers run this exact gateway via `uvx --from git+...@<ref>`
# with no lockfile of their own, so a future fastmcp/pyyaml/ruamel MAJOR could silently
# break the pinned gateway on a fresh resolve. Bound to the current major; widen
# deliberately after testing. The committed uv.lock pins the exact transitive tree.
dependencies = [
    "fastmcp>=3,<4",
    "pyyaml>=6,<7",
    "ruamel.yaml>=0.18,<0.20",
]

[project.optional-dependencies]
# Optional, opt-in capabilities. Core (vault) tools need none of these.
# graph     = Python (ast) + Ansible (yaml) code graph + query tools.
# graph-all = the above plus a broad tree-sitter pass (JS/TS/Go/Rust/Terraform/...).
# convert   = attachment -> markdown (markitdown).
graph = ["networkx>=3.4,<4"]
graph-all = ["networkx>=3.4,<4", "tree-sitter-language-pack>=0.7"]
convert = ["markitdown>=0.1"]
all = ["networkx>=3.4,<4", "tree-sitter-language-pack>=0.7", "markitdown>=0.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-asyncio>=0.24", "networkx>=3.4,<4"]

[project.urls]
Homepage = "https://github.com/fszalaj/knowledge-gateway"
Repository = "https://github.com/fszalaj/knowledge-gateway"
Issues = "https://github.com/fszalaj/knowledge-gateway/issues"

[project.scripts]
knowledge-gateway = "gateway.server:main"
knowledge-gateway-graph = "gateway.codegraph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway", "gateway.codegraph"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
